# sq-sandbox

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Dockerfile.firecracker  Dockerfile.test  Dockerfile.zig  Earthfile  README.md  README_JANET.md  TASK-6.2-SUMMARY.md  TEST-GUIDE.md  TESTING.md  build.zig  config  docker-compose.firecracker.yml  docker-compose.yml  entrypoint.sh  flake.nix  fly.toml  main.janet  seccomp.json  sq-guest-agent  squashd.asd  test-unprivileged.sh
.scud/: config.toml  scud.db  scud.db-shm  scud.db-wal
cgi-bin/: common.sh  health
docs/: api.md  deployment.md  modules.md  s3-sync.md  security.md
guest/: main.odin  vsock.odin
impl/rust/: Cargo.toml
impl/rust/guest/: main.rs
impl/rust/src/: bus.rs  config.rs  init.rs  main.rs  storage.rs  store_client.rs  validate.rs
impl/rust/src/api/: handlers.rs  middleware.rs  mod.rs  models.rs
impl/rust/src/proxy/: certs.rs  handler.rs  secrets.rs
impl/rust/src/sandbox/: cgroup.rs  exec.rs  exec_types.rs  firecracker.rs  lifecycle.rs  manager.rs  meta.rs  mod.rs  mounts.rs  mounts_integration_tests.rs  netns.rs  snapshot.rs  wireguard.rs
modules/: base-alpine.nix  claude-code.nix  golang.nix  nodejs.nix  nullclaw.nix  odin-claw.nix  python.nix  sqlite-libs.nix  tailscale.nix  wireguard.nix
nix/: image.nix  lib-squashfs.nix  modules.nix  nixos-module.nix
proxy/: main.go
shared/: Dockerfile.firecracker  entrypoint-v3.sh  entrypoint-v4.sh  seccomp-readonly.json  seccomp-strict.json  storage.sh
src/: api.janet  api.lisp  api.odin  api.zig  cgroup.janet  cgroup.odin  cgroup.zig  config.janet  config.lisp  config.odin  config.rs  config.zig  exec.janet  exec.lisp  exec.odin  exec.zig  firecracker.janet  firecracker.lisp  firecracker.odin  http.odin  init.janet  init.lisp  init.odin  init.zig  json.zig  linux_extra.odin  main.lisp  main.odin  main.rs  main.zig  manager.janet  manager.lisp  manager.odin  manager.zig  meta.janet  meta.odin  mounts.janet  mounts.odin  netns.janet  netns.lisp  (+22 more)
store/: Makefile  dune-project
store/lib/: config.ml  dune  materializer.ml  protocol.ml  s3_sync.ml  snapshot.ml  store.ml  store.mli  walker.ml
test/: Dockerfile.composefs  MOUNTS_TESTING.md  TASK_3.2_SUMMARY.md  composefs-validate.sh  mounts_integration_test.sh  run.sh  (+1 more)
(+296 files in other folders)
