[package]
name = "sq-sandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "squashd"
path = "src/main.rs"

[[bin]]
name = "sq-guest-agent"
path = "guest/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# HTTP client (for proxy forwarding)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
http = "1"

# Linux syscalls
nix = { version = "0.29", features = [
    "mount", "sched", "signal", "process", "fs",
    "ioctl", "net", "user", "hostname"
]}

# TLS / MITM proxy
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
x509-parser = "0.16"    # CA cert loading

# S3
aws-sdk-s3 = "1"
aws-config = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time (used by rcgen for cert validity)
time = "0.3"

# Misc
dashmap = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Guest agent vsock
tokio-vsock = { version = "0.5", optional = true }

# Netlink (for veth, addr, route, netns) — Linux only
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
netlink-packet-route = "0.21"

[dev-dependencies]
tempfile = "3"

# For the guest agent only (separate binary, minimal deps)
[features]
guest = ["tokio-vsock"]
